tests/compile_fail/all_requires_subpattern.cpp
#include <ptn/patternia.hpp>

int main() {
  auto p = ptn::all();
  (void)p;
  return 0;
}
